force-app/main/default/objects/Account/fields/Academic_Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>Academic_Calendar_Link__c</fullName>
    <label>Academic Calendar Link</label>
    <type>Url</type>
</CustomField>