force-app/main/default/objects/Account/fields/Account_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Account_Prefix__c</fullName>
    <inlineHelpText>Set a 4 character abbreviation for Project naming on Products.</inlineHelpText>
    <label>Account Prefix</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>