force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>IF(AND(OR(Current_Year_Sum__c &gt;0, Current_Year_Forecast__c &gt;0),Prior_Year_Revenue__c =0),&quot;New Client&quot;,
IF(OR( Prior_Year_Revenue__c &gt;0, Current_Year_Sum__c &gt;0),&quot;Active Existing Client&quot;,
IF(OR(Prior_Year_Revenue__c&lt;=0,Current_Year_Sum__c &lt;=0),&quot;Inactive Client&quot;,&quot;N/A&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>