force-app/main/default/objects/Account/fields/Active_Talent_Client__c.field-meta.xml
<CustomField>
    <fullName>Active_Talent_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this an active client of Wasserman?</inlineHelpText>
    <label>Active Talent Client</label>
    <type>Checkbox</type>
</CustomField>