force-app/main/default/objects/Account/fields/ACUI__c.field-meta.xml
<CustomField>
    <fullName>ACUI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACUI School Member?</label>
    <type>Checkbox</type>
</CustomField>