force-app/main/default/objects/Account/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Agency Accounts</description>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>