force-app/main/default/objects/Account/fields/Agent_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Agent_Cost_Center__c</fullName>
    <label>Agent Cost Center</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workday_Cost_Center_Complete</valueSetName>
    </valueSet>
</CustomField>