force-app/main/default/objects/Account/fields/Agent_Workday_Company__c.field-meta.xml
<CustomField>
    <fullName>Agent_Workday_Company__c</fullName>
    <label>Agent Workday Company</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workday_Company</valueSetName>
    </valueSet>
</CustomField>