force-app/main/default/objects/Account/fields/AKA__c.field-meta.xml
<CustomField>
    <fullName>AKA__c</fullName>
    <description>As known As reference to Account Name</description>
    <label>AKA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>