force-app/main/default/objects/Account/fields/All_Genres__c.field-meta.xml
<CustomField>
    <fullName>All_Genres__c</fullName>
    <description>All genres listed under artist</description>
    <inlineHelpText>In addition to Primary Genre, what are other genres classified for this client?</inlineHelpText>
    <label>All Genres</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>