force-app/main/default/objects/Account/fields/AMA_Collegiate_Chapter_8_22_2019__c.field-meta.xml
<CustomField>
    <fullName>AMA_Collegiate_Chapter_8_22_2019__c</fullName>
    <defaultValue>false</defaultValue>
    <description>American Marketing Association Collegiate Chapter as of 8/22/2019</description>
    <label>AMA Collegiate Chapter (11/3/2020)</label>
    <type>Checkbox</type>
</CustomField>