force-app/main/default/objects/Account/fields/Annual_Concert__c.field-meta.xml
<CustomField>
    <fullName>Annual_Concert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Concert?</label>
    <type>Checkbox</type>
</CustomField>