force-app/main/default/objects/Account/fields/Annual_Festival__c.field-meta.xml
<CustomField>
    <fullName>Annual_Festival__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Festival?</label>
    <type>Checkbox</type>
</CustomField>