force-app/main/default/objects/Account/fields/Asian__c.field-meta.xml
<CustomField>
    <fullName>Asian__c</fullName>
    <label>% Asian</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>