force-app/main/default/objects/Account/fields/Associate_s_degree__c.field-meta.xml
<CustomField>
    <fullName>Associate_s_degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate&apos;s degree</label>
    <type>Checkbox</type>
</CustomField>