force-app/main/default/objects/Account/fields/Awards_Offered__c.field-meta.xml
<CustomField>
    <fullName>Awards_Offered__c</fullName>
    <description>As noted in College Navigator</description>
    <label>Awards Offered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>