force-app/main/default/objects/Account/fields/AWS_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_ID__c</fullName>
    <label>AWS ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>