force-app/main/default/objects/Account/fields/Bachelor_s_degree__c.field-meta.xml
<CustomField>
    <fullName>Bachelor_s_degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bachelor&apos;s degree</label>
    <type>Checkbox</type>
</CustomField>