force-app/main/default/objects/Account/fields/Beverage_Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Beverage_Contract_Notes__c</fullName>
    <label>Beverage Contract Notes</label>
    <type>TextArea</type>
</CustomField>