force-app/main/default/objects/Account/fields/Black__c.field-meta.xml
<CustomField>
    <fullName>Black__c</fullName>
    <label>% Black or African American</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>