force-app/main/default/objects/Account/fields/Bookstore_Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Bookstore_Management_Company__c</fullName>
    <label>Bookstore Management Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Follett</fullName>
            </value>
            <value>
                <fullName>Barnes &amp; Noble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>