force-app/main/default/objects/Account/fields/CABS_Member_School__c.field-meta.xml
<CustomField>
    <fullName>CABS_Member_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CABS Member School?</label>
    <type>Checkbox</type>
</CustomField>