force-app/main/default/objects/Account/fields/Campus_Events__c.field-meta.xml
<CustomField>
    <fullName>Campus_Events__c</fullName>
    <label>Fall Campus Events</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>