force-app/main/default/objects/Account/fields/Campus_Map_Website__c.field-meta.xml
<CustomField>
    <fullName>Campus_Map_Website__c</fullName>
    <label>Campus Map Website</label>
    <type>Url</type>
</CustomField>