force-app/main/default/objects/Account/fields/Career_Services_Job_Positing_Site__c.field-meta.xml
<CustomField>
    <fullName>Career_Services_Job_Positing_Site__c</fullName>
    <label>Career Services Job Posting URL</label>
    <type>TextArea</type>
</CustomField>