force-app/main/default/objects/Account/fields/Children_s_Names_and_Birthdays__c.field-meta.xml
<CustomField>
    <fullName>Children_s_Names_and_Birthdays__c</fullName>
    <label>Children&apos;s Names and Birthdays</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>