force-app/main/default/objects/Account/fields/Classroom_Teacherts_FTE__c.field-meta.xml
<CustomField>
    <fullName>Classroom_Teacherts_FTE__c</fullName>
    <label>Classroom Teachers (FTE)</label>
    <type>TextArea</type>
</CustomField>