force-app/main/default/objects/Account/fields/Client_Department__c.field-meta.xml
<CustomField>
    <fullName>Client_Department__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action Sports Agency</fullName>
            </value>
            <value>
                <fullName>Action Sports Athletes</fullName>
            </value>
            <value>
                <fullName>Action Sports Media</fullName>
            </value>
            <value>
                <fullName>Athlete Exchange</fullName>
            </value>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Boxing</fullName>
            </value>
            <value>
                <fullName>Broadcasting</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Global Football Euro</fullName>
            </value>
            <value>
                <fullName>Global Football France</fullName>
            </value>
            <value>
                <fullName>Global Football Netherlands</fullName>
            </value>
            <value>
                <fullName>Global Football Spain</fullName>
            </value>
            <value>
                <fullName>Global Football UK</fullName>
            </value>
            <value>
                <fullName>Global Football US</fullName>
            </value>
            <value>
                <fullName>Golf Consulting &amp; Hosp</fullName>
            </value>
            <value>
                <fullName>Golf Events</fullName>
            </value>
            <value>
                <fullName>Golf Management Europe</fullName>
            </value>
            <value>
                <fullName>Golf Management UK</fullName>
            </value>
            <value>
                <fullName>Golf Management US</fullName>
            </value>
            <value>
                <fullName>Hockey</fullName>
            </value>
            <value>
                <fullName>Montag</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>NFL</fullName>
            </value>
            <value>
                <fullName>Rugby</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Team Sports Corporate</fullName>
            </value>
            <value>
                <fullName>WM: Anderson &amp; Rodriguez Pod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>