force-app/main/default/objects/Account/fields/Client_Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Client_Sub_Division__c</fullName>
    <label>Client Sub Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action Sports</fullName>
            </value>
            <value>
                <fullName>Athlete Exchange</fullName>
            </value>
            <value>
                <fullName>Global Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Team Sports</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>