force-app/main/default/objects/Account/fields/Clothing_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Sizes__c</fullName>
    <label>Clothing Sizes</label>
    <type>TextArea</type>
</CustomField>