force-app/main/default/objects/Account/fields/COCA_Membership_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>COCA_Membership_Expiration_Date__c</fullName>
    <label>COCA Membership Expiration Date</label>
    <type>Date</type>
</CustomField>