force-app/main/default/objects/Account/fields/College_Navigator_URL__c.field-meta.xml
<CustomField>
    <fullName>College_Navigator_URL__c</fullName>
    <label>College Navigator URL</label>
    <type>Url</type>
</CustomField>