force-app/main/default/objects/Account/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>Displays the ownership of the Client record based on Primary Agent from Sharepoint</description>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workday_Cost_Center_Complete</valueSetName>
    </valueSet>
</CustomField>