force-app/main/default/objects/Account/fields/Count_of_Budget_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Budget_Opportunities__c</fullName>
    <label>Count of Budget Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Budget</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>