force-app/main/default/objects/Account/fields/Count_of_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Closed_Won_Opportunities__c</fullName>
    <label>Count of Closed Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Laundry Service / Cycle, Marketing, Cycle Direct</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>