force-app/main/default/objects/Account/fields/Count_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opportunities__c</fullName>
    <label>Count of Open Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Close_Date_Year__c</field>
        <operation>greaterOrEqual</operation>
        <value>2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Budget, Forecast</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>