force-app/main/default/objects/Account/fields/Count_of_Opps_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opps_Marketing__c</fullName>
    <label>Count of Opps - Marketing</label>
    <summarizedField>Opportunity.Latest_Product_End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Count_of_Products_Marketing__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>