force-app/main/default/objects/Account/fields/County_Name__c.field-meta.xml
<CustomField>
    <fullName>County_Name__c</fullName>
    <label>County Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>