force-app/main/default/objects/Account/fields/Create_Workday_Customer__c.field-meta.xml
<CustomField>
    <fullName>Create_Workday_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Workday Customer</label>
    <type>Checkbox</type>
</CustomField>