force-app/main/default/objects/Account/fields/Current_Year_Forecasted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Forecasted_Amount__c</fullName>
    <label>Current Year Forecast</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Forecast</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Close_Date_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>