force-app/main/default/objects/Account/fields/Current_Year_New_Business__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_New_Business__c</fullName>
    <formula>Current_Year_Forecasted_Amount__c - (Current_Year_Sum__c +  Current_Year_Projected__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Business</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>