force-app/main/default/objects/Account/fields/Current_Year_Projected__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Projected__c</fullName>
    <label>Current Year Projected</label>
    <summarizedField>Opportunity.Current_Year_Forecast__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Close_Date_Year__c</field>
        <operation>equals</operation>
        <value>2020, 2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Verbal Commitment</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>