force-app/main/default/objects/Account/fields/Current_Year_Projected_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Projected_Sales__c</fullName>
    <description>Sales goal for the current calendar year</description>
    <inlineHelpText>Sales goal for the current calendar year</inlineHelpText>
    <label>Current Year Projected Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>