force-app/main/default/objects/Account/fields/Current_Year_Sum__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Sum__c</fullName>
    <label>Current Year Contracted</label>
    <summarizedField>Opportunity.Current_Year_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Laundry Service / Cycle, Marketing, Cycle Direct</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>